# akashi

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  akashi.pro  akashi_en_US.ts  core.pro  docker-compose.yml  docker-entrypoint.sh  license_notice.txt  main.cpp  project-akashi.pro  resources.qrc
.github/workflows/: main.yml
akashi/: CMakeLists.txt  akashi.pro  main.cpp
akashi/include/: config_manager.h
akashi/src/: config_manager.cpp
bin_tests/config/: acl_roles.ini  areas.ini  backgrounds.txt  characters.txt  command_extensions.ini  config.ini  dice.ini  music.json
config/: characters.txt
core/: CMakeLists.txt  core.pro  moc_predefs.h
core/include/: acl_mask.h  acl_roles_handler.h  advertiser.h  advertiser2.h  akashiutils.h  aoclient.h  aopacket.h  area_data.h  command_extension.h  config_manager.h  crypto_helper.h  data_types.h  db_manager.h  discord.h  http_advertiser.h  logger.h  logger2.h  music_manager.h  playerstateobserver.h  server.h  server_data.h  ws_client.h  ws_proxy.h
core/include/logger/: u_logger.h  u_logger_datatypes.h  writer_full.h  writer_modcall.h  writer_sql.h
core/include/network/: aopacket.h  network_socket.h
core/include/packet/: aopacket.h  packet_casea.h  packet_de.h  packet_factory.h  packet_generic.h  packet_hi.h  packet_hp.h  packet_id.h  packet_info.h  packet_ms.h  packet_pw.h  packet_rc.h  packet_rd.h  packet_rm.h  packet_rt.h  packet_zz.h
core/src/: acl_roles_handler.cpp  advertiser.cpp  advertiser.h  advertiser2.cpp  akashiutils.cpp  aoclient.cpp  aoclient.h  aopacket.cpp  area_data.cpp  area_data.h  command_extension.cpp  command_extension.h  config_manager.cpp  config_manager.h  crypto_helper.h  db_manager.cpp  discord.cpp  http_advertiser.cpp  logger.cpp  logger2.cpp  music_manager.cpp  music_manager.h  packets.cpp  playerstateobserver.cpp  server.cpp  server.h  server_data.cpp  testimony_recorder.cpp  typedefs.h  ws_client.cpp  ws_proxy.cpp
core/src/commands/: area.cpp  authentication.cpp  casing.cpp  command_helper.cpp  messaging.cpp  moderation.cpp  music.cpp  roleplay.cpp
core/src/logger/: u_logger.cpp  u_logger.h  writer_full.cpp  writer_full.h  writer_modcall.cpp  writer_sql.cpp
core/src/network/: aopacket.cpp  aopacket.h  network_socket.cpp  network_socket.h
core/src/packet/: aopacket.cpp  packet_askchaa.cpp  packet_askchaa.h  packet_casea.cpp  packet_casea.h  packet_cc.cpp  packet_cc.h  packet_ch.cpp  packet_ch.h  packet_ct.cpp  packet_ct.h  packet_de.cpp  packet_de.h  packet_ee.cpp  packet_ee.h  packet_factory.cpp  packet_factory.h  packet_generic.cpp  packet_generic.h  packet_hi.cpp  packet_hi.h  packet_hp.cpp  packet_hp.h  packet_id.cpp  packet_id.h  packet_mc.cpp  packet_mc.h  packet_ms.cpp  packet_ms.h  packet_pe.cpp  packet_pe.h  packet_pw.cpp  packet_pw.h  packet_rc.cpp  packet_rc.h  packet_rd.cpp  packet_rd.h  packet_rm.cpp  packet_rm.h  packet_rt.cpp  (+6 more)
data/icon/: akashi.rc
doxygen/: akashi.qch
include/: advertiser.h  akashimain.h  aoclient.h  aopacket.h  area_data.h  ban_manager.h  config_manager.h  db_manager.h  discord.h  icchatpacket.h  logger.h  packet_manager.h  server.h  ws_client.h  ws_proxy.h
lib/: lib.pro
lib/include/: logger.h  (+3 more)
nutcase_behaviour/: .clang-format  CMakeLists.txt
nutcase_behaviour/cmake/: akashiConfig.cmake.in
nutcase_behaviour/lib/: akashi_core.exp  akashi_core.lib
nutcase_behaviour/src/akashi/: CMakeLists.txt
nutcase_behaviour/src/akashi/cmake/: softwareinformation.h.in
nutcase_behaviour/src/akashi/src/: main.cpp  pluginmanager.cpp  pluginmanager.h  server.cpp  server.h  softwareinformation.h
nutcase_behaviour/src/core/: CMakeLists.txt
nutcase_behaviour/src/core/include/: akashi_core_global.h  akashiplugin.h  packet.h  packet_builder.h  packet_decoder.h  packet_helpers.h  packet_types.h  packetregistry.h  service.h  serviceregistry.h  servicewrapper.h
nutcase_behaviour/src/core/src/: packet.cpp  packet_builder.cpp  packet_decoder.cpp  packetregistry.cpp  serviceregistry.cpp
nutcase_behaviour/src/network/: CMakeLists.txt
nutcase_behaviour/src/network/include/: akashi_network_global.h  discordhook.h  packet.h  packetfactory.h  serverclient.cpp  serverclient.h  serverpublisher.h
nutcase_behaviour/src/network/src/: discordhook.cpp  packet.cpp  packetfactory.cpp  serverpublisher.cpp
nutcase_behaviour/src/protocol/: CMakeLists.txt
nutcase_behaviour/src/protocol/include/: akashi_protocol_global.h  packet_ms.h
nutcase_behaviour/src/protocol/src/: packet_ms.cpp
nutcase_behaviour/tests/: CMakeLists.txt
nutcase_behaviour/tests/core/: CMakeLists.txt  test_packet.cpp  test_packet_builder.cpp  test_packet_decoder.cpp  test_packet_helpers.cpp  test_packetregistry.cpp  test_serviceregistry.cpp  test_servicewrapper.cpp
nutcase_behaviour/tests/network/: CMakeLists.txt  test_discordhook.cpp  test_serverpublisher.cpp
nutcase_behaviour/tests/protocol/: CMakeLists.txt  test_packet_ms.cpp
scripts/: maxmind2sqlite.ps1
src/: Service.h  acl_roles_handler.cpp  advertiser.cpp  advertiser.h  akashidefs.cpp  akashidefs.h  akashimain.cpp  akashiutils.h  aoclient.cpp  aoclient.h  aopacket.cpp  area_data.cpp  area_data.h  ban_manager.cpp  command_extension.cpp  command_extension.h  commands.cpp  config_manager.cpp  config_manager.h  data_types.h  db_manager.cpp  db_manager.h  discord.cpp  discord.h  discordmessagehelper.h  icchatpacket.cpp  logger.cpp  main.cpp  medieval_parser.cpp  medieval_parser.h  music_manager.cpp  music_manager.h  packet_manager.cpp  packets.cpp  playerstateobserver.cpp  playerstateobserver.h  publisher.cpp  publisher.h  server.cpp  server.h  (+7 more)
tests/: CMakeLists.txt  tests.pro  tests_common.pri
tests/unittest_acl_roles_handler/: CMakeLists.txt  tst_unittest_acl_roles_handler.cpp  unittest_acl_roles_handler.pro
tests/unittest_aopacket/: CMakeLists.txt  tst_unittest_aopacket.cpp  unittest_aopacket.pro
tests/unittest_command_extension/: CMakeLists.txt  tst_unittest_command_extension.cpp  unittest_command_extension.pro
tests/unittest_crypto/: CMakeLists.txt  tst_unittest_crypto.cpp  unittest_crypto.pro
(+101 files in other folders)
